Wed May 17 12:03:41 2000  Darrell Brunsch <brunsch@uci.edu>

        * Msg_WFMO_Reactor.cpp:
        * Msg_WFMO_Reactor.h:
        * Msg_WFMO_Reactor.i:
        * ace/README:
        * ace/config-WinCE.h:
        * ace/config-pharlap.h:

          Added an ACE_LACKS_MSG_WFMO macro that is used when ACE_WIN32
          is defined but MsgWaitForMultipleOjbects isn't.  This replaces
          the checking for Pharlap and Windows CE.  Thanks to David Hauck
          <davidh@realtimeint.com> for this suggestion.

Wed May 17 13:34:22 2000  Steve Huston  <shuston@riverace.com>

        * tests/Thread_Pool_Reactor_Test.cpp: Added a little more diagnostic
          info that was useful in diagnosing a previous problem in the
          ACE_TP_Reactor.

Wed May 17 12:48:24 2000  Carlos O'Ryan  <coryan@cs.wustl.edu>

	* tests/CDR_File_Test.cpp:
	  More workarounds for compiler bugs, this time egcs-1.1.1 is at
	  fault.

Wed May 17 10:58:23 2000  Steve Huston  <shuston@riverace.com>

        * ace/WFMO_Reactor.(cpp h): Changed complex_dispatch_handler() and
          upcall() to redo upcall(s) when the handler returns 1. This adds
          ACE_WFMO_Reactor functionality equivalent to the ACE_Select_Reactor
          family. To do this, the upcall() function's signature was changed
          to accept a WSANETWORKEVENTS structure by reference. upcall()
          updates the lNetworkEvents flags to indicate which requested a
          callback. If the handler is not marked for deletion, the upcall
          is done again. To properly support this, the call to
          WSAEnumNetworkEvents is done once in complex_dispatch_handler and
          the events flags are updated on each call to upcall().
          Thanks to Irfan Pyarali <irfan@cs.wustl.edu> for his guidance
          in designing this change.

Wed May 17 10:54:05 2000  Jeff Parsons  <parsons@cs.wustl.edu>

	* examples/ConfigViewer/ConfigTreeCtrl.cpp:
	* examples/ConfigViewer/ConfigTreeCtrl.h: